kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish
            port:
              number: 80

  - host: djqubus.wronamichal.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish
            port:
              number: 80

  - host: infoboard.wronamichal.pl
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: varnish
              port:
                number: 80

  - host: cms-infoboard.wronamichal.pl
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: varnish
              port:
                number: 80
